# skellymodels

./: .gitignore  README.md  mediapipe_left_hand_3d_xyz.csv  mediapipe_left_hand_3d_xyz.npy  pyproject.toml
skellymodels/: create_mediapipe_actor.py  create_model_skeleton.py  create_skeleton.py  mediapipe_actor_examples.py  mediapipe_human_example.py  mediapipe_rigid_bones_testing.py  rigid_bones_testing.py  test_model_info.py  using_the_human_class.ipynb
skellymodels/biomechanics/: anatomical_calculations.py
skellymodels/biomechanics/calculations/: enforce_rigid_bones.py
skellymodels/biomechanics/models/: anatomical_calculation.py
skellymodels/builders/: anatomical_structure_builder.py  trajectory_builder.py
skellymodels/experimental/: model.py  model_v2.py  validators.py
skellymodels/experimental/fmc_files/: calculate_center_of_mass.py
skellymodels/experimental/model_info/: mediapipe_config.json  mediapipe_model_info.py  model_info.py
skellymodels/experimental/model_redo/: mediapipe_actor_examples.py  mediapipe_human_example.py  (+3 more)
skellymodels/managers/: actor.py  animal.py  board.py  human.py
skellymodels/model_info/: mediapipe_model_info.py  model_info.py  openpose_model_info.py  qualisys_model_info.py  rigid_body_mediapipe_model_info.py
skellymodels/models/: anatomical_structure.py  aspect.py  error.py  tracking_model_info.py  trajectory.py
skellymodels/skeleton_models/: marker_info.py  segments.py  skeleton.py
skellymodels/tracker_info/: mediapipe_model_info.yaml  model_info.py
skellymodels/utils/: create_mediapipe_actor.py  types.py
(+20 files in other folders)
